--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@ h1 {
     text-align: center;
 }
 
+.buttonContainer {
+    display: flex;
+    justify-content: center;
+}
+
 #\30 {
     border-style: none solid solid none;   
 }
